# SZTE-progalap-cash-register

./: .gitignore  CMakeLists.txt  README.md  beolvaso.c  beolvaso.h  debug_tools.h  item.c  item.h  kiir.c  main.c
beolvaso/: CMakeLists.txt  beolvaso.c  beolvaso.h
item/: CMakeLists.txt  item.c  item.h
kiir/: CMakeLists.txt  kiir.c  kiir.h
test/: CMakeLists.txt  utest.c  utest_item.c  utest_item.h
